--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "typescript-demo"
+name = "workers-router-typescript-template"
 type = "webpack"
-account_id = "e733c486ff936cfb7cdf644badc953e2"
+account_id = ""
 workers_dev = true
 route = ""
 zone_id = ""
